<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codesignet.consalto.contactus.ui.activity.ContactUsActivity">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="494dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="#fff"
        android:gravity="center"
        android:text="@string/contactUs"
        android:textColor="#000"
        android:textSize="20dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/NameTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/NameTxt"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/new_edit"
        android:drawableLeft="@mipmap/contactusidentitylarge"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/NameTxt"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/msgTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/msgTxt"
        android:layout_width="345dp"
        android:layout_height="101dp"
        android:layout_marginBottom="132dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/new_edit"
        android:drawableLeft="@mipmap/contactusmessagelarge"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/Message"
        android:inputType="textMultiLine"
        android:lines="6"
        android:overScrollMode="always"
        android:paddingLeft="20dp"
        android:scrollHorizontally="false"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/counterTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitMsg"
        android:layout_width="299dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="508dp"
        android:background="@drawable/edit_txt_rounded_corners"
        android:text="@string/Submit"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/counterTxt"
        android:layout_width="89dp"
        android:layout_height="46dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/submitMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
